refactored for java 11 compatibility