@@ -12,6 +12,7 @@ import java.nio.file.Files;
 import java.util.Arrays;
 import java.util.List;
 import java.util.logging.Logger;
+import java.util.stream.Collectors;
 
 public class PrinterAttributesRepository {
 
@@ -33,7 +34,7 @@ public class PrinterAttributesRepository {
                         throw new RuntimeException(ioException);
                     }
                 })
-                .toList();
+                .collect(Collectors.toList());
     }
 
 }
